# cs_agent

./: .env.example  .gitignore  README.md  package.json
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_pgvector.py
apps/api/app/: __init__.py  cli.py  main.py
apps/api/app/core/: config.py  llm.py  logging.py  observability.py  pii.py
apps/api/app/db/: base.py
apps/api/app/graph/: __init__.py  audit.py  handoff.py  intake.py  pii.py  reflector.py  routing.py  state.py  supervisor.py
apps/api/app/graph/workers/: __init__.py  lims.py  scheduler.py
apps/api/app/models/: __init__.py
apps/api/app/rag/: __init__.py  ingest.py  retriever.py
apps/api/app/routes/: __init__.py  chat.py  health.py  webhooks.py
apps/api/app/tools/: __init__.py  lims.py  scheduler.py
apps/api/corpus/methods/: METHOD-VOC-8260D.md
apps/api/corpus/policies/: POL-CLINICAL-INTERPRETATION.md
apps/api/corpus/pricing/: PRICING-2026.md
apps/api/corpus/regulations/: EPA-MCL-DRINKING-WATER.md
apps/api/corpus/sops/: SOP-METALS-ICPMS.md  SOP-PFAS-001.md
apps/api/scripts/: seed.py
apps/api/tests/: conftest.py  test_basic.py
apps/web/: .env.example  README.md  next.config.mjs  package.json  tailwind.config.mjs
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/widget/: page.tsx
apps/web/lib/: api.ts
docs/: ARCHITECTURE.md  HIPAA_CONTROLS.md  RAG_PIPELINE.md  ROADMAP.md  RUNBOOK.md
infra/docker/: docker-compose.yml
