[project]
name = "green-lab-api"
version = "0.1.0"
description = "Green Lab customer support brain (FastAPI + LangGraph)"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",

    # Config & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",

    # LangGraph / LangChain
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.20",
    "langchain>=0.3.13",
    "langchain-core>=0.3.28",
    "langchain-community>=0.3.13",
    "langchain-text-splitters>=0.3.5",
    "langchain-postgres>=0.0.13",

    # LLM providers
    "anthropic>=0.39.0",
    "openai>=1.55.0",
    "voyageai>=0.3.0",
    "cohere>=5.13.0",

    # Observability
    "langsmith>=0.2.0",
    "structlog>=24.4.0",

    # PII
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",

    # HTTP
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "ipython>=8.30.0",
]

[tool.uv]
# Treat this as an application — don't try to install the package itself.
package = false
